Change from a blog concept to an article centric view of things. Change the namespace to also reflect these changes.

--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,15 @@
 {
-    "name": "nandwabee/blog",
-    "description": "A simple blogging utility for laravel 5",
+    "name": "investigatively/article",
+    "description": "A publishing utility for laravel 5",
     "type": "Utility",
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Nandwabee\\Blog\\": "src/",
+            "Investigatively\\Article\\": "src/",
         }
     },
     "autoload-dev": {
-        "classmap": [
-            "tests/TestCase.php"
-        ]
+        
     },
     "authors": [
         {
