--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
     "require": {
         "codesleeve/laravel-stapler": "1.0.*"
     },
+    "require-dev": {
+        "atoum/atoum": "~2.1"
+    },
     "autoload": {
         "psr-4": {
             "Investigatively\\Article\\": "src/"
