--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "grunt-contrib-sass": "^0.9.2"
   },
   "dependencies": {
+    "angular-marked": "^1.0.1",
+    "marked": "^0.3.5",
+    "materialize-css": "^0.97.5"
   }
 }
